# lowtechguys

./: .gitignore  .lfsconfig  .stignore  Caddyfile  Makefile  README.md  extensions.py  guys-low-tech.sublime-project  lowtechguys.sublime-project  netlify.toml  package-lock.json  package-lock.sync-conflict-20240919-101214-NN5G6AC.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  run.fish  tailwind.config.js  utils.py
public/: fonts  sitemap.sync-conflict-20240919-100910-NN5G6AC.xml  sitemap.xml  svg  video
scripts/: build-hugeicons.py
src/: business.plim  contact-success.plim  contact.plim  defs.plim  index.plim
src/blog/: index.plim
src/cling/: index.plim  og.plim  privacy.plim
src/clop/: eula.plim  index.plim  og.plim  privacy.plim  terms.plim
src/crank/: index.plim  og.plim  privacy.plim
src/gammadimmer/: index.plim  og.plim  privacy.plim
src/grila/: index.plim  og.plim  privacy.plim
src/istherenet/: index.plim  og.plim  privacy.plim
src/keylume/: index.plim  integration.plim  og.plim  privacy.plim
src/musicdecoy/: index.plim  og.plim  privacy.plim
src/pipiri/: index.plim  og.plim  privacy.plim
src/presskit/: index.plim
src/rcmd/: classic.plim  index.plim  og.plim  privacy.plim
src/startupfolder/: index.plim  og.plim  privacy.plim
src/studioicc/: eula.plim  index.plim  og.plim  privacy.plim  terms.plim
src/volum/: index.plim  og.plim  privacy.plim
src/xml/: sitemap.plim
stylus/: animations.styl  app.styl  app.styl.map  base.styl  fonts.styl  index.styl  mixins.styl  modernize.styl  variables.styl
(+31 files in other folders)
