[project]
name = "lowtechguys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "livereload>=2.7.1",
    "lxml>=5.3.2",
    "multiplex>=0.6.1",
    "plim",
    "pygments>=2.19.1",
    "requests>=2.32.3",
    "setuptools<58",
]

[tool.uv.sources]
plim = { git = "https://github.com/alin23/Plim.git", rev = "b752517" }
